main.tf
#terraform {
 # required_providers {
    #ami = {
      #source  = "hashicorp/aws"
     # version = "~> 6.0"
    #}
  #}
#}

# Configure the AWS Provider
provider "aws" {
  region = "ap-south-1"
}

# Create a VPC
#resource "aws_vpc" "example" {
#  cidr_block = "10.0.0.0/16"
#}
